--- a/gb/22/3/7/n13627535.md
+++ b/gb/22/3/7/n13627535.md
@@ -1,23 +1,23 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zhhqsq3413/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zhhqsq3413/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zhhqsq3413/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>旧金山沙加缅度侨界 声援乌克兰</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/03/id13627754-IMG_3171-600x400.jpg" />
 <h6>2022年3月6日，旧金山沙加缅度侨学各界举行谴责俄罗斯侵略乌克兰记者会。（曹景哲／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2022年03月07日讯】（大纪元记者曹景哲<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1.md#1">旧金山</a>报导）旧金山侨学各界，于上周日（3月6日）下午，在华埠皇宫酒楼举行南北湾侨学界谴责<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>侵略<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>记者会。</p>
-<p><ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1.md#1">旧金山</a>侨领林炳昌主持了记者会，他表示，2月24日<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>突然入侵<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>，对乌克兰各地狂轰滥炸，造成大量平民死伤，犯有战争罪行，从旧金山到<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E6%B2%99%E5%8A%A0%E7%BC%85%E5%BA%A6.md#1">沙加缅度</a>的侨学界共同声援乌克兰政府与人民。</p>
-<p><ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E6%B2%99%E5%8A%A0%E7%BC%85%E5%BA%A6.md#1">沙加缅度</a>二埠中华会馆副主席陈良荣医师，代表大家宣读共同宣言，谴责俄罗斯杀害无辜的乌克兰人们，威胁使用核武器的行径，呼吁停止支持俄罗斯反文明、反人道、反和平、反自由的无耻侵略行为。</p>
+	<p>【大纪元2022年03月07日讯】（大纪元记者曹景哲<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1.md#1">旧金山</a>报导）旧金山侨学各界，于上周日（3月6日）下午，在华埠皇宫酒楼举行南北湾侨学界谴责<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>侵略<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>记者会。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1.md#1">旧金山</a>侨领林炳昌主持了记者会，他表示，2月24日<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>突然入侵<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>，对乌克兰各地狂轰滥炸，造成大量平民死伤，犯有战争罪行，从旧金山到<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%99%E5%8A%A0%E7%BC%85%E5%BA%A6.md#1">沙加缅度</a>的侨学界，共同声援乌克兰政府与人民。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%99%E5%8A%A0%E7%BC%85%E5%BA%A6.md#1">沙加缅度</a>二埠中华会馆副主席陈良荣医师，代表大家宣读共同宣言，谴责俄罗斯杀害无辜的乌克兰人们，威胁使用核武器的行径，呼吁停止支持俄罗斯反文明、反人道、反和平、反自由的无耻侵略行为。</p>
 <figure id="attachment_13627935" aria-describedby="caption-attachment-13627935" style="width: 617px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/03/id13627935-IMG_3062-617x400.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/03/id13627935-IMG_3062-617x400.jpg" alt="" width="617" b="400" class="size-medium_vertical wp-image-13627935" /></a><figcaption id="caption-attachment-13627935" class="wp-caption-text">2022年3月6日，旧金山侨领林炳昌（中）主持记者会，二埠中华会馆副主席陈良荣医师（右二）代表大家宣读共同宣言。（曹景哲／大纪元）</figcaption></figure>
-<p>20世纪经历2次世界大战，各国痛定思痛成立了联合国及构建多元沟通管道，期许战争不再发生。北加州全侨对于本次俄罗斯侵略乌克兰之疯狂和蛮横，表达震惊、痛切与完全无法接受。</p>
+<p>20世纪经历两次世界大战，各国痛定思痛成立了联合国及构建多元沟通管道，期许战争不再发生。北加州全侨对于本次俄罗斯侵略乌克兰之疯狂和蛮横，表达震惊、痛切与完全无法接受。</p>
 <p>严厉谴责俄罗斯违反《联合国宪章》非法动用武力，侵犯乌克兰主权及领土，破坏区域及全球和平稳定，强烈呼吁俄罗斯政府，尽速停止军事侵略行动。</p>
 <p>支持美国与欧洲为首的国际社会，为停止俄罗斯侵略乌克兰的各项作为，肯定中华民国政府筹募大量救援物资义助乌克兰，并在数天之内即号召台湾人民捐款超过2.3亿新台币，积极为国际人道与世界和平做出贡献。</p>
 <p>来自沙加缅度的侨务委员陈俊明医师表示，目前大家不再关心通货膨胀，而是关心乌克兰能不能再撑下去。看到因为乌克兰的英勇抵抗，俄军开始无所不用其极，使用国际禁用的武器，对学校、医院进行轰炸，导致众多平民伤亡，非常气愤。</p>
 <p>陈医师强调，俄国侵略乌克兰对华人世界来讲，感同身受。中共也想用武力来解决历史问题，如果俄国侵略乌克兰成功的话，如果国际社会不能有效阻止的话，中共对台湾的野心也会极度膨胀，对台湾非常危险。因此，华人应该支持乌克兰，国际社会应该合力援助乌国。</p>
 <figure id="attachment_13627933" aria-describedby="caption-attachment-13627933" style="width: 710px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/03/id13627933-IMG_3120-710x400.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/03/id13627933-IMG_3120-710x400.jpg" alt="" width="710" b="400" class="size-medium_vertical wp-image-13627933" /></a><figcaption id="caption-attachment-13627933" class="wp-caption-text">2022年3月6日，旧金山侨务委员赵炳贤呼吁普京停止战争，立即撤军，并追究俄国的战争罪行。（曹景哲／大纪元）</figcaption></figure>
 <p>侨务委员赵炳贤说，普京根本就是狂妄的无赖，这场战争就是为了满足他这个独裁者的邪恶野心，就是要宣示强权，不择手段，不惜涂炭生灵，罔顾平民百姓的死活。在中共洗脑下的中国人，无知地支持俄国侵略，侮辱乌克兰人，对人间炼狱般的惨景无动于衷，令人匪夷所思。他呼吁普京停止战争，立即撤军，并追究俄国的战争罪行。</p>
-<p>旧金山侨务委员林马玉冰、沙加缅度侨务顾问赖宏乙、美洲秉公总堂总理周达昌、元老徐楚南、香港会馆代表麦家安、士德顿朔源堂主席、侨务顾问邝劭源、封从德博士、任松林博士、前国大代表李学英等人也出席并发言。◇</p>
+<p>旧金山侨务委员林马玉冰、沙加缅度侨务顾问赖宏乙、美洲秉公总堂总理周达昌、元老徐楚南、香港会馆代表麦家安、士德顿溯源堂主席、侨务顾问邝劭源、封从德博士、任松林博士、前国大代表李学英等人也出席并发言。◇</p>
 <p><ahref="https://sf.epochtimes.com/donate/"><img class="aligncenter size-large wp-image-12584681" src="https://i.epochtimes.com/assets/uploads/2020/11/donate-SF-600x179px-C-600x179.jpg" alt="" width="600" b="179" /></a><br />
 <ahref="https://sf.epochtimes.com/subscribe/"><img class="aligncenter size-large wp-image-12584702" src="https://i.epochtimes.com/assets/uploads/2020/11/Subscribe-SF_600x179px-600x179.jpg" alt="" width="600" b="179" /></a><br />
 <ahref="https://www.give1car.com/"><img class="aligncenter size-large wp-image-12584887" src="https://i.epochtimes.com/assets/uploads/2020/11/car-donation-NTD-600x70.png" alt="" width="600" b="70" /></a><br />
@@ -28,35 +28,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13625788.md#1">俄入侵乌克兰 IMF︰严重影响全球经济</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13625993.md#1">土耳其总统和普京通话促停火 莫斯科提条件</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13626140.md#1">何清涟：俄乌战争将改写世界军事版图</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13626343.md#1">布林肯：泽连斯基若遇害 乌克兰有应急计划</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/6/n13625788.md#1">俄入侵乌克兰 IMF︰严重影响全球经济</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/6/n13625993.md#1">土耳其总统和普京通话促停火 莫斯科提条件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/6/n13626140.md#1">何清涟：俄乌战争将改写世界军事版图</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/6/n13626343.md#1">布林肯：泽连斯基若遇害 乌克兰有应急计划</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/30/n9910984.md#1" target="_blank">文革中自杀的名人（1）人民日报总编邓拓</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/10/23/n8423584.md#1" target="_blank">屡遭拘禁摧残16年 妇坚修法轮功神奇复原</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/20/n10498992.md#1" target="_blank">裴毅然：再说“四?一二”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/17/n10916061.md#1" target="_blank">同化真善忍 一位澳洲人寻获的幸福人生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zhhqsq3413/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zhhqsq3413/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/7/n13627535.htm">旧金山沙加缅度侨界 声援乌克兰</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/7/n13627535.htm">旧金山沙加缅度侨界 声援乌克兰</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/7/n13627535.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zhhqsq3413/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zhhqsq3413/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/22/3/7/n13627535.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
